fix/overflow nome do pet

--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -77,6 +77,9 @@ main {
     color: var(--brand-1);
     font-weight: 700;
     font-size: var(--font-5);
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .especiePet {
